# Aztec-Proving-Simulation

./: .gitignore  README.md  app.py  pyproject.toml
data/: submissions.parquet
docs/: mainnet-rewards.md
proving_sim/: booster.py  fetch.py  mechanism_c.py  real_data.py  simulation.py  synth.py
reference-sim/: ProverRewardBoostProposal.sol  reward_comparison.csv
tests/: check_pnl.py  check_real.py  investigate.py  smoke.py  test_booster.py  test_mechanism_c.py
